add fontawesome and resize the logo

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,8 @@
     text-align: center;
 }
 .logo{
-    height: 50px;
+    height: 100px;
+    margin:0px;
 }
 .header nav {
     background-color: black;
