--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,8 +8,9 @@
     padding-right: 140px;
 }
 .logo{
-    height: 100px;
+    height: 50px;
     margin:0px;
+    cursor: pointer;
 }
 .header a{
 color: #FFFFFF;
