--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -8,7 +8,11 @@
 .product-name{
     color: blue;
     font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
+    font-family: 'Lato';
 }
+
 .btn-regular{
     background-color: goldenrod;
     width: 150px;
@@ -23,4 +27,8 @@
 
 .img{
    width: 200px;
+}
+
+.btn-regular:hover{
+    background-color: orange;
 }
