--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -7,3 +7,9 @@
     margin-right: 5px;
     margin-left: 50px;
 }
+
+@media screen and (max-width:1100px){
+    .products-container{
+        grid-template-columns:repeat(2,1fr);
+    }
+}
